--- a/storeadmin/templates/store_admin/delivery_status.html
+++ b/storeadmin/templates/store_admin/delivery_status.html
@@ -1,11 +1,11 @@
-{%extends 'storeadmin_layout.html'%}
+{%extends 'store_admin/storeadmin_layout.html'%}
     {% load static %}
 
 {%block content%}
          <div id="layoutSidenav_content">
             <main>
                <div class="container-fluid">
-                  <h1 class="mt-4">Estimate Status</h1>
+                  <h1 class="mt-4">Delivey Status</h1>
                   
                   <div class="row">
                      <div class="col-xl-12">
