--- a/storeadmin/templates/store_admin/delivery.html
+++ b/storeadmin/templates/store_admin/delivery.html
@@ -1,12 +1,12 @@
-{%extends 'storeadmin_layout.html'%}
+{%extends 'store_admin/storeadmin_layout.html'%}
     {% load static %}
 
 {%block content%}
          <div id="layoutSidenav_content">
             <main>
                <div class="container-fluid">
-                  <h1 class="mt-4">Pickups</h1>
-                 
+                  <h1 class="mt-4">Delivery</h1>
+                  
                   <div class="row">
                      <div class="col-xl-12">
                         <div class="card mb-4 order-list">
