--- a/user/templates/user/store_detail.html
+++ b/user/templates/user/store_detail.html
@@ -166,6 +166,36 @@
                                        </div>
                                     </div>
                                  </div>
+                                 <hr>
+                                 <h5 class="mb-4">Details:Address & Phoneno</h5>
+                                 <div class="row">
+                                    <div class="col-sm-9">
+                                       <div class="form-group">
+                                          <label>Name</label>
+                                          <input class="form-control" type="text" placeholder="Name" name="name">
+                                       </div>
+                                    </div>
+                                    <div class="col-sm-9">
+                                       <div class="form-group">
+                                          <label>Address</label>
+                                          <textarea class="form-control" placeholder="Address" style="height: 100px" name="address"></textarea>
+                                       </div>
+                                    </div>
+                                    <div class="col-sm-9">
+                                       <div class="form-group">
+                                          <label>Landmark</label>
+                                          <input class="form-control" type="text" placeholder="Landmark" name="landmark">
+                                       </div>
+                                    </div>
+                                 </div>
+                                 <div class="row">
+                                    <div class="col-sm-9">
+                                       <div class="form-group">
+                                          <label>Phone No</label>
+                                          <input class="form-control" type="text" placeholder="Phone" name="phone">
+                                       </div>
+                                    </div>
+                                 </div>
                                  <div class="form-group text-right">
                                     <button class="btn btn-primary" type="submit"> Submit </button>
                                  </div>
