--- a/storeadmin/templates/store_admin/delivery_status.html
+++ b/storeadmin/templates/store_admin/delivery_status.html
@@ -1,11 +1,12 @@
 {%extends 'store_admin/storeadmin_layout.html'%}
     {% load static %}
+    {% load event_tags %}
 
 {%block content%}
-         <div id="layoutSidenav_content">
+        <div id="layoutSidenav_content">
             <main>
                <div class="container-fluid">
-                  <h1 class="mt-4">Delivey Status</h1>
+                  <h1 class="mt-4">Delivery Status</h1>
                   
                   <div class="row">
                      <div class="col-xl-12">
@@ -19,117 +20,35 @@
                                  <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
                                        <tr class="text-uppercase">
-                                          <th>User</th>
+                                          <th>Booking Id</th>
                                           <th>User Name</th>
-                                          <th>Restaurant</th>
+                                          <th>Appliance Name</th>
                                           <th>Status</th>
-                                          <th>Ordered on</th>
-                                          <th>Total</th>
-                                          <th>Quantity</th>
-                                          <th>Action</th>
                                        </tr>
                                     </thead>
                                     <tbody>
+                                       {% for i in delivery_det %}
+                                       {% for j in booking_det %}
+                                       {% for k in user_det %}
+
+                                       {% if i.booking_id|int == j.booking_id|int and i.user_id|int == k.id|int %}
+                                       {% for l in appliance_det %}
+                                       {% if j.appliance_id|int == l.appliance_id|int %}
                                        <tr>
-                                          <td><img class="img-profile rounded-circle" src="img/user/1.png"></td>
-                                          <td> Rhona Davidson	</td>
-                                          <td>Metro Resto</td>
-                                          <td><button disabled="" type="button" class="btn btn-sm btn-success btn-round">delivered</button></td>
-                                          <td>Sat, Jul 11, 2020 1:38 AM</td>
-                                          <td>$262.49</td>
-                                          <td>4</td>
-                                          <td><a href="edit-order.html" class="btn btn-primary btn-sm">View</a></td>
+                                          <td> #{{i.booking_id}}   </td>
+                                          <td>{{k.username}}</td>
+                                          <td>{{l.appliance_name}}</td>
+                                          <td>{% if i.delivery_status == "pending" %}<button disabled="" type="button" class="btn btn-sm btn-danger btn-round">Pending</button>
+                                          {% else %}<button disabled="" type="button" class="btn btn-sm btn-success btn-round">Delivered</button>{% endif %}</td>
                                        </tr>
-                                       <tr>
-                                          <td><img class="img-profile rounded-circle" src="img/user/2.png"></td>
-                                          <td> Herrod Chandler	</td>
-                                          <td>Metro Resto</td>
-                                          <td><button disabled="" type="button" class="btn btn-sm btn-danger btn-round">cancel</button></td>
-                                          <td>Fri, Jul 10, 2020 4:55 PM</td>
-                                          <td>$170.77</td>
-                                          <td>5</td>
-                                          <td><a href="edit-order.html" class="btn btn-primary btn-sm">View</a></td>
-                                       </tr>
-                                       <tr>
-                                          <td><img class="img-profile rounded-circle" src="img/user/3.png"></td>
-                                          <td> Airi Satou	</td>
-                                          <td>Metro Resto</td>
-                                          <td><button disabled="" type="button" class="btn btn-sm btn-success btn-round">delivered</button></td>
-                                          <td>Fri, Jul 10, 2020 3:48 PM</td>
-                                          <td>$26.78</td>
-                                          <td>2</td>
-                                          <td><a href="edit-order.html" class="btn btn-primary btn-sm">View</a></td>
-                                       </tr>
-                                       <tr>
-                                          <td><img class="img-profile rounded-circle" src="img/user/4.png"></td>
-                                          <td> Brielle Williamson	</td>
-                                          <td>The Square restaurants</td>
-                                          <td><button disabled="" type="button" class="btn btn-sm btn-primary btn-round">created</button></td>
-                                          <td>Fri, Jul 10, 2020 2:24 PM</td>
-                                          <td>$81.23</td>
-                                          <td>2</td>
-                                          <td><a href="edit-order.html" class="btn btn-primary btn-sm">View</a></td>
-                                       </tr>
-                                       <tr>
-                                          <td><img class="img-profile rounded-circle" src="img/user/5.png"></td>
-                                          <td> Cedric Kelly	</td>
-                                          <td>Metro Resto</td>
-                                          <td><button disabled="" type="button" class="btn btn-sm btn-success btn-round">delivered</button></td>
-                                          <td>Fri, Jul 10, 2020 11:45 AM</td>
-                                          <td>$1578.00</td>
-                                          <td>1</td>
-                                          <td><a href="edit-order.html" class="btn btn-primary btn-sm">View</a></td>
-                                       </tr>
-                                       <tr>
-                                          <td><img class="img-profile rounded-circle" src="img/user/6.png"></td>
-                                          <td> Ashton Cox	</td>
-                                          <td>The Square restaurants</td>
-                                          <td><button disabled="" type="button" class="btn btn-sm btn-primary btn-round">created</button></td>
-                                          <td>Fri, Jul 10, 2020 11:37 AM</td>
-                                          <td>$238.53</td>
-                                          <td>4</td>
-                                          <td><a href="edit-order.html" class="btn btn-primary btn-sm">View</a></td>
-                                       </tr>
-                                       <tr>
-                                          <td><img class="img-profile rounded-circle" src="img/user/1.png"></td>
-                                          <td> Garrett Winters	</td>
-                                          <td>Metro Resto</td>
-                                          <td><button disabled="" type="button" class="btn btn-sm btn-danger btn-round">rejected</button></td>
-                                          <td>Thu, Jul 9, 2020 3:54 PM</td>
-                                          <td>$107.85</td>
-                                          <td>2</td>
-                                          <td><a href="edit-order.html" class="btn btn-primary btn-sm">View</a></td>
-                                       </tr>
-                                       <tr>
-                                          <td><img class="img-profile rounded-circle" src="img/user/2.png"></td>
-                                          <td> Tiger Nixon	</td>
-                                          <td>The Square restaurants</td>
-                                          <td><button disabled="" type="button" class="btn btn-sm btn-danger btn-round">rejected</button></td>
-                                          <td>Thu, Jul 9, 2020 3:19 PM</td>
-                                          <td>$83.65</td>
-                                          <td>2</td>
-                                          <td><a href="edit-order.html" class="btn btn-primary btn-sm">View</a></td>
-                                       </tr>
-                                       <tr>
-                                          <td><img class="img-profile rounded-circle" src="img/user/3.png"></td>
-                                          <td> AMITKUMAR CHAUHAN</td>
-                                          <td>Jassi de Parathe</td>
-                                          <td><button disabled="" type="button" class="btn btn-sm btn-primary btn-round">created</button></td>
-                                          <td>Thu, Jul 9, 2020 2:28 PM</td>
-                                          <td>$46.62</td>
-                                          <td>2</td>
-                                          <td><a href="edit-order.html" class="btn btn-primary btn-sm">View</a></td>
-                                       </tr>
-                                       <tr>
-                                          <td><img class="img-profile rounded-circle" src="img/user/4.png"></td>
-                                          <td> Umed Ibodulloev</td>
-                                          <td>Metro Resto</td>
-                                          <td><button disabled="" type="button" class="btn btn-sm btn-success btn-round">delivered</button></td>
-                                          <td>Thu, Jul 9, 2020 1:26 PM</td>
-                                          <td>$66.71</td>
-                                          <td>1</td>
-                                          <td><a href="edit-order.html" class="btn btn-primary btn-sm">View</a></td>
-                                       </tr>
+                                       {% endif %}
+
+                                       {% endfor %}
+                                       {% endif %}
+
+                                       {% endfor %}
+                                       {% endfor %}
+                                       {% endfor %}
                                     </tbody>
                                  </table>
                               </div>
