--- a/storeadmin/templates/store_admin/estimate.html
+++ b/storeadmin/templates/store_admin/estimate.html
@@ -35,7 +35,7 @@
                                     <hr>
                                     <div class="float-right">
                                        {% if i.estimategivenconfirm == "pending" %}
-                                       <a href="#0" class="btn btn-sm btn-info" data-toggle="modal" data-target="#estimate{{i.pickup_id}}"><i class="feather-edit"></i> Confirm Pickup</a>
+                                       <a href="#0" class="btn btn-sm btn-info" data-toggle="modal" data-target="#estimate{{i.pickup_id}}"><i class="feather-edit"></i> Estimate</a>
                                        {% else %}
                                        <span class="bg-warning px-2 py-1 rounded ml-1"> Estimate Given </span>
                                        {% endif %}
