--- a/storeadmin/templates/store_admin/delivery.html
+++ b/storeadmin/templates/store_admin/delivery.html
@@ -6,7 +6,7 @@
          <div id="layoutSidenav_content">
             <main>
                <div class="container-fluid">
-                  <h1 class="mt-4">Pickups</h1>
+                  <h1 class="mt-4">Delivery</h1>
                  
                   <div class="row">
                      <div class="col-xl-12">
@@ -42,7 +42,7 @@
                                     <div class="float-right">
 
                                        {% if i.delivery_status == "pending" %}
-                                       <a href="#0" class="btn btn-sm btn-info" data-toggle="modal" data-target="#confirm{{i.delivery_id}}"><i class="feather-edit"></i> Confirm Pickup</a>
+                                       <a href="#0" class="btn btn-sm btn-info" data-toggle="modal" data-target="#confirm{{i.delivery_id}}"><i class="feather-edit"></i> Confirm Delivery</a>
                                        {% else %}
                                        <span class="bg-warning px-2 py-1 rounded ml-1">Item Delivered </span>
                                        {% endif %}
@@ -62,7 +62,7 @@
                               <div class="modal-dialog modal-dialog-centered" role="document">
                                  <div class="modal-content">
                                     <div class="modal-header">
-                                       <h5 class="modal-title" id="edit_bookingLabel">Confirm Pickup</h5>
+                                       <h5 class="modal-title" id="edit_bookingLabel">Confirm Delivery</h5>
                                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                                        <span aria-hidden="true">×</span>
                                        </button>
